@@ -1,6 +1,8 @@
 Revision 4.2.3
 --------------
 
+- Fix to MibTree class to properly report noSuchObject & noSuchInstance
+  SNMP special values.
 - Fix to libsmi2pysnmp tool to make it working again in Python < 2.7
 - MibTree.readTest[Get]Next() reworked to be called uniformely so
   user could tap on these methods at any level of the MIB tree.
